--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc",
-        "postinstall": "npm run build",
+        "tsc": "tsc",
+        "postinstall": "npm run tsc",
         "start": "node dist/server.js",
         "dev": "ts-node-dev server/server.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
