--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/mongoose": "^5.10.3",
         "@types/morgan": "^1.9.2",
         "@types/node": "^14.14.31",
-        "ts-node-dev": "^1.1.1"
+        "ts-node-dev": "^1.1.1",
+        "typescript": "^4.2.2"
     }
 }
